Resolved merge conflicts

--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@ footer {
     background: #333;
     color: white;
     text-align: center;
-    padding: 10px 0px;
+    padding: 10px 0;
 }
 .hello{
     border-radius:5 px;
