--- a/styles.css
+++ b/styles.css
@@ -158,10 +158,10 @@ textarea {
 }
 
 input[type="submit"] {
-    background-color: #4CAF50;
+    background-color:#DC143C;
     color: white;
     padding: 10px 15px;
-    border: none;
+    border: black;
     border-radius: 5px;
     cursor: pointer;
 }
