--- a/styles.css
+++ b/styles.css
@@ -159,7 +159,7 @@ textarea {
 
 input[type="submit"] {
     background-color:#DC143C;
-    color: white;
+    color: black;
     padding: 10px 15px;
     border: black;
     border-radius: 5px;
