--- a/styles.css
+++ b/styles.css
@@ -414,12 +414,27 @@ footer p {
 
 
 .textful {
-    font-size: 72px;
+    font-size: 2rem; 
     font-weight: bold;
-    background: linear-gradient(45deg, #ff6f61, #ffcc00, #28a745);
+    background: #f6f6f6;
+    background-image: linear-gradient(45deg, #ff6f61, #ffcc00, #28a745);
+    background-size: 200% 200%;
     -webkit-background-clip: text;
     background-clip: text;
+    animation: fillAnimation 2s ease-out infinite;
     color: transparent; 
+}
+
+@keyframes fillAnimation {
+    0% {
+        background-position: 0% 0%;
+    }
+    50% {
+        background-position: 100% 100%;
+    }
+    100% {
+        background-position: 0% 0%;
+    }
 }
 
 #back-to-top:hover {
