--- a/styles.css
+++ b/styles.css
@@ -262,6 +262,8 @@ button {
     cursor: pointer;
     transition: background 0.3s, transform 0.3s ease;
     box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
+    font-family:'Roboto', sans-serif;
+    font-weight:800;
 }
 
 button:hover {
