--- a/styles.css
+++ b/styles.css
@@ -511,8 +511,9 @@ footer p {
 
 #neonClock {
   font-size: 2.5rem;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Roboto', sans-serif;
   text-align: center;
   margin: 20px 0;
   text-shadow: 0 0 10px currentColor, 0 0 20px currentColor, 0 0 30px currentColor, 0 0 40px currentColor;
+  font-weight:bolder;
 }
