--- a/styles.css
+++ b/styles.css
@@ -516,7 +516,7 @@ footer p {
   margin: 20px 0;
   text-shadow: 0 0 10px currentColor, 0 0 20px currentColor, 0 0 30px currentColor, 0 0 40px currentColor;
   font-weight:bolder;
-  color: #00FFFF;
+  color: #4bfa7a;
 }
 
 
